<resources>
    <string name="app_name">Android App Portfolio</string>

    <string name="title_apps_list">My Android Apps</string>
    <string name="action_settings">Settings</string>

    <string name="app_title_spotify_streamer">Spotify Streamer</string>
    <string name="app_title_scores_app">Scores App</string>
    <string name="app_title_library_app">Library App</string>
    <string name="app_title_build_it_bigger">Build It Bigger</string>
    <string name="app_title_xyz_reader">XYZ Reader</string>
    <string name="app_title_capstone">Capstone: Spotter</string>
</resources>
